Fixed pagination alignment

--- a/template/templates/sarnia_gives/css/modules.css
+++ b/template/templates/sarnia_gives/css/modules.css
@@ -213,6 +213,7 @@
 	list-style: none;
 	margin: 0;
 	text-align: center;
+	float: none;
 }
 .-koowa-pagination .pages  li, .pagination .pages li {
 	background: none;
